# speech_tools

./: COPYING  INSTALL  INSTALL.md  Makefile  README.md  configure  configure.ac  configure.in  meson.build  meson_options.txt  mkinstalldirs
audio/: Makefile  audioP.h  esd.cc  gen_audio.cc  irixaudio.cc  linux_sound.cc  macosxaudio.cc  meson.build  mplayer.cc  nas.cc  os2audio.cc  pipewire.cc  pulseaudio.cc  sun16audio.cc  win32audio.cc
base_class/: EST_DMatrix.cc  EST_FMatrix.cc  EST_FeatureData.cc  EST_Features.cc  EST_Option.cc  EST_Pathname_unix.cc  EST_Pathname_win32.cc  EST_SMatrix.cc  EST_TDeque.cc  EST_THash.cc  EST_TKVL.cc  EST_TList.cc  EST_TMatrix.cc  EST_TNamedEnum.cc  EST_TSimpleMatrix.cc  EST_TSimpleVector.cc  EST_TTimeIndex.cc  EST_TVector.cc  EST_Token.cc  EST_Tvectlist.cc  EST_UList.cc  EST_Val.cc  EST_features_aux.cc  EST_features_io.cc  EST_ilist_aux.cc  EST_matrix_support.cc  EST_matrix_support.h  EST_slist_aux.cc  EST_svec_aux.cc  Makefile  meson.build  rateconv.cc  rateconv.h  vec_mat_aux.cc  vec_mat_aux_d.cc  vec_mat_aux_i.cc
base_class/inst_tmpl/: Makefile  deq_i_t.cc  deq_s_t.cc  hash_fi_t.cc  hash_ii_t.cc  hash_iv_t.cc  hash_sd_t.cc  hash_sf_t.cc  hash_sfmp_t.cc  hash_si_t.cc  hash_srp.cc  hash_ss_t.cc  hash_sv_t.cc  kvl_fi_t.cc  kvl_ii_t.cc  kvl_rs_t.cc  kvl_sd_t.cc  kvl_sf_t.cc  kvl_si_t.cc  kvl_ss_t.cc  kvl_sv_t.cc  kvl_vpi_t.cc  list_c_t.cc  list_d_t.cc  list_f_t.cc  list_i_t.cc  list_li_t.cc  list_s_t.cc  list_si_t.cc  list_val_t.cc  list_vi_t.cc  list_vs_t.cc  (+21 more)
doc/: DoxyFile  DoxyFile.in  Makefile  bibliography.bib  estbaseclass.dox  estexec.md  estgram.md  estintro.md  estlicence.md  estling.md  estmanuals.md  estserver.md  estsigpr.md  estspeechclass.md  esttilt.md  estutil.md  estwagon.md  estxml.md  index.md  meson.build
include/: EST.h  EST_Chunk.h  EST_Complex.h  EST_Contents.h  EST_DMatrix.h  EST_Event.h  EST_FMatrix.h  EST_FeatureData.h  EST_Features.h  EST_FringeServer.h  EST_HMM.h  EST_Handleable.h  EST_IMatrix.h  EST_Ngrammar.h  EST_Option.h  EST_PST.h  EST_Pathname.h  EST_Regex.h  EST_SCFG.h  EST_SCFG_Chart.h  EST_SMatrix.h  EST_Server.h  EST_ServiceTable.h  EST_SingleChannelWave.h  EST_String.h  EST_StringTrie.h  EST_TBox.h  EST_TBuffer.h  EST_TDeque.h  EST_THandle.h  EST_THash.h  EST_TIterator.h  EST_TKVL.h  EST_TList.h  EST_TMatrix.h  EST_TNamedEnum.h  EST_TSimpleMatrix.h  EST_TSimpleVector.h  EST_TTimeIndex.h  EST_TVector.h  (+41 more)
ling_class/: EST_FeatureFunctionContext.cc  EST_FeatureFunctionContext.h  EST_FeatureFunctionPackage.cc  EST_Item.cc  EST_Item_Content.cc  EST_Relation.cc  EST_Relation_mls.cc  EST_Utterance.cc  EST_UtteranceFile.cc  EST_UtteranceFile.h  EST_item_aux.cc  EST_item_content_aux.cc  EST_relation_aux.cc  EST_relation_compare.cc  EST_relation_track.cc  EST_utterance_aux.cc  Makefile  apml.cc  apml.h  genxml.cc  genxml.h  item_aux.cc  item_feats.cc  ling_class_init.cc  ling_class_init.h  ling_t.cc  meson.build  relation_io.cc  relation_io.h  solexml.cc  solexml.h  standard_feature_functions.cc
main/: Makefile  align_main.cc  bcat_main.cc  ch_lab_main.cc  ch_track_main.cc  ch_utt_main.cc  ch_wave_main.cc  design_filter_main.cc  dp_main.cc  meson.build  na_play_main.cc  na_record_main.cc  ngram_build_main.cc  ngram_test_main.cc  ols_main.cc  ols_test_main.cc  pda_main.cc  pitchmark_main.cc  scfg_make_main.cc  scfg_parse_main.cc  scfg_test_main.cc  scfg_train_main.cc  sig2fv_main.cc  sigfilter_main.cc  siod_main.cc  spectgen_main.cc  tilt_analysis_main.cc  tilt_synthesis_main.cc  viterbi_main.cc  wagon_main.cc  wagon_test_main.cc  wfst_build_main.cc  wfst_run_main.cc  wfst_train_main.cc  xml_parser_main.cc
rxp/: Makefile  XML_Parser.cc  charset.c  ctype16.c  dtd.c  input.c  meson.build  rxp.c  rxp.mak  stdio16.c  string16.c  system.c  url.c  xmlparser.c
scripts/: Makefile  build_docbook_index.prl  cxx_to_docbook.prl  est_examples.sh  est_gdb.sh  est_program.sh  example_to_doc++.prl  make_wagon_desc.sh  meson.build  pm.prl  raw_to_xgraph.prl  resynth.sh  shared_script  shared_setup_sh  tex_to_images.prl
sigpr/: EST_Window.cc  Makefile  delta.cc  fft.cc  filter.cc  meson.build  misc.cc  pitchmark.cc  sigpr_frame.cc  sigpr_utt.cc  spectrogram.cc
siod/: Makefile  editline.c  editline.h  el_complete.c  el_sys_unix.c  el_sys_win32.c  el_unix.h  io.cc  io.h  meson.build  siod.cc  siod.mak  siod_est.cc  siodeditline.c  siodeditline.h  siodp.h  slib.cc  slib_core.cc  slib_doc.cc  slib_file.cc  slib_format.cc  slib_io.cc  slib_io.h  slib_list.cc  slib_math.cc  slib_python.cc  slib_python.h  slib_repl.cc  slib_server.cc  slib_str.cc  slib_sys.cc  slib_xtr.cc  trace.cc
speech_class/: EST_Track.cc  EST_TrackFile.cc  EST_TrackFile.h  EST_TrackMap.cc  EST_Wave.cc  EST_WaveFile.cc  EST_WaveFile.h  EST_track_aux.cc  EST_wave_aux.cc  EST_wave_cuts.cc  EST_wave_io.cc  EST_wave_temp.cc  EST_wave_utils.cc  EST_wave_utils.h  Makefile  esps_io.cc  esps_utils.cc  esps_utils.h  htk.h  meson.build  ssff.cc  ssff.h  track_t.cc  waveP.h  wave_t.cc
stats/: EST_DProbDist.cc  EST_Discrete.cc  EST_cluster.cc  EST_multistats.cc  EST_ols.cc  EST_viterbi.cc  Makefile  confusion.cc  dynamic_program.cc  meson.build  ols.mak
testsuite/: Makefile  ch_track.sh  ch_wave.sh  complex_example.cc  complex_regression.cc  deq_example.cc  deq_regression.cc  feature_example.cc  feature_regression.cc  handle_example.cc  handle_regression.cc  hash_example.cc  hash_regression.cc  kvl_example.cc  kvl_regression.cc  ling_example.cc  ling_regression.cc  list_example.cc  list_regression.cc  lpc.sh  meson.build  named_enum_example.cc  named_enum_regression.cc  pathname_example.cc  pathname_regression.cc  run_test.py  run_test.sh  sigpr_example.cc  sigpr_regression.cc  string_example.cc  string_regression.cc  tilt.sh  token_example.cc  token_regression.cc  track_example.cc  track_regression.cc  viterbi.sh  wagon.sh  xml_example.cc  xml_regression.cc
utils/: EST_cutils.c  EST_error.c  EST_swapping.cc  Makefile  cmd_line.cc  cmd_line_aux.cc  est_file.cc  filetrans.cc  meson.build  system_specific_unix.c  system_specific_win32.c  util_io.cc  walloc.c
(+401 files in other folders)
