install_headers([
    'EST_audio.h',
    'EST_bool.h',
    'EST_ChannelType.h',
    'EST_Chunk.h',
    'EST_cluster.h',
    'EST_cmd_line.h',
    'EST_cmd_line_options.h',
    'EST_common.h',
    'EST_Complex.h',
    'EST_Contents.h',
    'EST_cutils.h',
    'EST_DMatrix.h',
    'EST_dynamic_model.h',
    'EST_error.h',
    'EST_Event.h',
    'EST_FeatureData.h',
    'EST_Featured.h',
    'EST_features_aux.h',
    'EST_Features.h',
    'EST_FileType.h',
    'EST_FMatrix.h',
    'EST_FringeServer.h',
    'EST_grammar.h',
    'EST.h',
    'EST_Handleable.h',
    'EST_HMM.h',
    'EST_IMatrix.h',
    'EST_inline_utils.h',
    'EST_io_aux.h',
    'EST_iostream.h',
    'EST_kalman.h',
    'EST_lattice.h',
    'EST_lattice_io.h',
    'EST_ling_class.h',
    'EST_math.h',
    'EST_model_types.h',
    'EST_multistats.h',
    'EST_Ngrammar.h',
    'EST_Option.h',
    'EST_Pathname.h',
    'EST_PST.h',
    'EST_Regex.h',
    'EST_rw_status.h',
    'EST_SCFG_Chart.h',
    'EST_SCFG.h',
    'EST_Server.h',
    'EST_ServiceTable.h',
    'EST_sigpr.h',
    'EST_simplestats.h',
    'EST_SingleChannelWave.h',
    'EST_SMatrix.h',
    'EST_socket.h',
    'EST_sort.h',
    'EST_speech_class.h',
    'EST_stats.h',
    'EST_strcasecmp.h',
    'EST_string_aux.h',
    'EST_String.h',
    'EST_StringTrie.h',
    'EST_system.h',
    'EST_TBox.h',
    'EST_TBuffer.h',
    'EST_TDeque.h',
    'EST_THandle.h',
    'EST_THash.h',
    'EST_tilt.h',
    'EST_TIterator.h',
    'EST_TKVL.h',
    'EST_TList.h',
    'EST_TMatrix.h',
    'EST_TNamedEnum.h',
    'EST_Token.h',
    'EST_track_aux.h',
    'EST_Track.h',
    'EST_TrackMap.h',
    'EST_TSimpleMatrix.h',
    'EST_TSimpleVector.h',
    'EST_TSortable.h',
    'EST_TTimeIndex.h',
    'EST_TVector.h',
    'EST_types.h',
    'EST_UList.h',
    'EST_unix.h',
    'EST_util_class.h',
    'EST_Val_defs.h',
    'EST_Val.h',
    'EST_viterbi.h',
    'EST_Wagon.h',
    'EST_walloc.h',
    'EST_wave_aux.h',
    'EST_Wave.h',
    'EST_WFST.h',
    'siod_defs.h',
    'siod_est.h',
    'siod.h'
  ],
  subdir : meson.project_name() / 'include')

pkg_config_h_subdirs += meson.project_name() / 'include'

subdir('instantiate')
subdir('ling_class')
subdir('rxp')
subdir('sigpr')
subdir('unix')
subdir('win32')

